WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26531
Timezone calculation incorrect in Venezuela.
https://bugs.webkit.org/show_bug.cgi?id=26531
Summary
Timezone calculation incorrect in Venezuela.
Gavin Barraclough
Reported
2009-06-18 21:56:53 PDT
The problem is that we're calculating the timezone relative to 01/01/2000, but the VET timezone changed from -4 hours to -4:30 hours on 12/09/2007. According to the spec, section 15.9.1.9 states "the time since the beginning of the year", presumably meaning the *current* year. Change the calculation to be based on whatever the current year is, rather than a canned date.
Attachments
The patch
(2.14 KB, patch)
2009-06-18 21:58 PDT
,
Gavin Barraclough
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2009-06-18 21:58:48 PDT
Created
attachment 31532
[details]
The patch
Geoffrey Garen
Comment 2
2009-06-18 22:02:48 PDT
Comment on
attachment 31532
[details]
The patch r=me assuming all JSC tests pass
Gavin Barraclough
Comment 3
2009-06-18 22:07:24 PDT
Sending JavaScriptCore/ChangeLog Sending JavaScriptCore/wtf/DateMath.cpp Transmitting file data .. Committed revision 44842.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug